# data-and-ai-summit-2025

./: .gitignore  README.md  app.R  app.py  greeting.md  pyproject.toml  requirements.txt
data/: doped-filter.sql  stages.parquet
eda/: .env  eda.qmd  pyproject.toml
python-app/: app.py  app.yaml  data_description.md  instructions.md  pyproject.toml  requirements.txt
r-app/: app.R  data_description.md  greeting.md
