[project]
name = "data-and-ai-summit-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chatlas>=0.7.1",
    "databricks-sdk>=0.54.0",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "plotly>=6.1.1",
    "posit-sdk>=0.10.0",
    "querychat",
    "scipy>=1.15.3",
    "shiny>=1.4.0",
    "shinywidgets>=0.6.2",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.11.10",
]

[tool.uv.sources]
querychat = { git = "https://github.com/posit-dev/querychat", subdirectory = "python-package" }
