[project]
name = "eda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "databricks-sdk>=0.55.0",
    "dotenv>=0.9.9",
    "ibis>=3.3.0",
    "ibis-framework[databricks]>=10.5.0",
    "matplotlib>=3.10.3",
    "polars>=1.30.0",
]
